// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.rainsoft.proto";
option java_outer_classname = "PlaceProto";
option objc_class_prefix = "HLW";

package place;

// The greeting service definition.
service Place {
  // Sends a greeting
  rpc GetPlaceList (PlaceListReq) returns (PlaceListRsp) {}
}
message PlaceListReq {
}

message PlaceListRsp {
	repeated Place place_list = 1;
	message Place {
          string    company_id = 1;  // 网吧编号
          string    company_name = 2;  // 网吧名称
          int32    	status = 3;  //营业状态
          string    area_code = 4;  //区域编码
          string    create_time = 5;  // 通讯时间
          string 	address = 6;//地址
    }
}
